--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,9 @@
       rel="stylesheet"
     />
     <title>GLOBALSOFT</title>
+    <!-- RECAPTCHA -->
+      <script src="https://www.google.com/recaptcha/api.js" async defer></script> 
+    <!-- RECAPTCHA -->
   </head>
   <body>
     <noscript> You need to enable JavaScript to run this app. </noscript>
@@ -38,5 +41,12 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <!-- IZIPAY 
+    <link
+      rel="stylesheet"
+      href="https://static.micuentaweb.pe/static/js/krypton-client/V4.0/ext/classic.css"
+    />
+    <script src="https://static.micuentaweb.pe/static/js/krypton-client/V4.0/ext/classic.js"></script>
+     IZIPAY -->
   </body>
 </html>
